--- a/alpha tec.css
+++ b/alpha tec.css
@@ -3,7 +3,7 @@ body {
   width: 100.5%;
   height: 100%;
   margin: 0px;
-  background-color: #000000;
+  background-color: #191919;
   padding: 0;
   color: white;
   align-items: center;
@@ -21,6 +21,34 @@ body {
 		display: block;
 
 		}
+
+.container{
+	width: 100%;
+	min-height: 100vh;
+	display: flex;
+	justify-content: space-around;
+	align-items:center; 
+	position: relative;
+}
+.box h2{
+	text-transform: uppercase;
+	color:#191919;
+}
+.box i.fa{
+	color:#1E1E1E;
+	width: 100px;
+	height: 150px;
+	border: 1px solid #505050;
+	border-radius: 10px;
+	padding: 0px;
+	font-size: 10rem;
+	transition: .5s ease-in-out;
+}
+
+.box:hover i.fa{
+	font-size: 3rem;
+	transform: translate(90px, -160px);
+}
 nav{
 	width: 98%;
 	margin-top:50px;
@@ -138,7 +166,7 @@ height: 100%;
 
 #divisao{
 	height: 10px;
-background-color: black;
+background-color: cornflowerblue;
 }
 
 h3{
@@ -258,7 +286,7 @@ h1{
 .carrosel ul{
 	display: flex;
 	list-style:none;
-	width: 700px;
+	width: 100%;
 	height: 250px;
 }
 
@@ -284,7 +312,6 @@ h1{
 	background-color: white;
 	text-align: center;
 	color: black;
-	cursor: pointer;
 	font-family: 'cambria';
 }
 
@@ -293,12 +320,15 @@ h2{
 	text-align: center;
 	border: none;
 }
-#meio:hover{
-	background-color: #2854A0;
-}
+
 #imagem{
 cursor: pointer;
-align: center;
+}
+
+
+
+li{
+	color: aliceblue;
 }
 
 p{
