--- a/Tela inicial.css
+++ b/Tela inicial.css
@@ -1,7 +1,7 @@
 /* CSS Document */
 body { 
   width: 101%;
-  height: 40%;
+  height: 100%;
   margin: 0px;
   background-color: #000000;
   padding: 0;
@@ -12,10 +12,10 @@ body {
 
 .barra {
 		background-color: #FFFFFF;
-		height: 100%;
+		height: 85%;
 		transition: all .2% linear;
 		left:-200px;
-	    width: 25%;
+	    width: 22%;
 	    padding: 0px;
 		float: left;
 		display: block;
@@ -90,6 +90,30 @@ nav a{
 	
 }
 
+.zoom3 h3{
+	color:black;
+	cursor: pointer;
+}
+
+.zoom3 li{
+	color:black;
+	cursor: pointer;
+}
+.zoom3h3:hover{
+	color: #AEAEAE;
+}
+.zoom3 li:hover{
+	color: #AEAEAE;
+}
+
+legend{
+	color:black;
+	cursor: pointer;
+}
+
+legend:hover{
+	color: #2079ff;
+}
 span:hover{
 	color:cornflowerblue;
 }
@@ -105,7 +129,7 @@ span:hover{
 }
 
 h1:hover{
-	color: cornflowerblue;
+	color: #FF4D4D;
 }
 
 .zoom {
@@ -120,6 +144,7 @@ h1:hover{
 	transition: all 0.7s;
 	cursor: pointer;
 	border:solid, 5px;
+	margin-left: 60px;
 }
 
 .zoom:hover img {
@@ -129,19 +154,18 @@ h1:hover{
 }
 
 .zoom2 {
-	overflow: hidden;
-	margin-rigth: 50%;
-	margin-top: 2%;
-	margin-left: %;
+	margin-left: auto;
 }
 
 .zoom2 img {
-	max-width: 30%;
+	max-width: 50%;
 	-moz-transition: all 0.3s;
 	-webkit-transition: all 0.3s;
 	transition: all 0.7s;
 	cursor: pointer;
 	border:solid, 1px;
+	margin-left: auto;
+	margin-inline: initial;
 	
 	
 }
@@ -154,28 +178,47 @@ h1:hover{
 }
 
 .zoom3 {
-	overflow: hidden;
-	margin-left: 35%;
-	margin-top: -7.5%;
-	margin-rigth: 55%;
-  
-	
+	margin-left: auto;
 
 }
 
 .zoom3 img {
-	max-width: 50%;
+max-width: 50%;
 	-moz-transition: all 0.3s;
 	-webkit-transition: all 0.3s;
 	transition: all 0.7s;
 	cursor: pointer;
-	
+	border:solid, 1px;
+	margin-left: auto;
+	margin-inline: auto;
+    margin-top: -130px;
+		
 }
 
 .zoom3:hover img {
 	-moz-transform: scale(1.1);
 	-webkit-transform: scale(1.1);
 	transform: scale(1.1);
+}
+
+.zoom4 img {
+max-width: 50%;
+    -moz-transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    transition: all 0.7s;
+    cursor: pointer;
+    border: solid, 1px;
+    margin-top: -285px;
+    padding: 155px;
+	margin-right: 525px;
+ 
+    
+;
+}
+.zoom4:hover img {
+-moz-transform: scale(1.1);
+-webkit-transform: scale(1.1);
+transform: scale(1.1);
 }
 
 @media screen and (min-width: 50px) {
@@ -209,12 +252,28 @@ font-family: 'Cambria';
 }
 
 .email{
-	align-items: center;
-	 display: flex;
     
 	 color: black;
+	width: 100px; 
+	
 }
 
+.meio{
+	background-color: #FFFFFF;
+	padding: 22px;
+}
+
+li{
+	text-align: center;
+	margin-top: 0px;
+}
+#imagemlateral{
+	margin-left: 1000px;
+}
+
+#imglateral{
+	margin-left: 1000px;
+}
 button:hover{
 	background-color: cornflowerblue;
 	
@@ -222,12 +281,13 @@ button:hover{
 label{
 	color: black;
 
+
 }
 
-fidelset{
-width: 100%; 
- 
+label:hover{
+	color: red;
 }
+
 
 button{
 border:1px solid #FFFFFF;
@@ -241,10 +301,13 @@ color:white;
 font-size:13px;
 padding:6px 10px;
 text-decoration:none;
+margin-inline: 350px;
+margin-inline: 550px;
+
 }
 
 fieldset{
-        width: 30%;
+        width: 100%;
 }
       
 small{
@@ -295,4 +358,10 @@ h1{
 	color:#E4171B;
 }
 
-
+.redes-sociais ul li {
+margin-left: 50%;
+list-style: none;
+}
+.redes-sociais {
+width: 100%;
+}
