--- a/Tela inicial.css
+++ b/Tela inicial.css
@@ -1,28 +1,57 @@
 /* CSS Document */
 body { 
-  width: 101%;
-  height: 100%;
-  margin: 0px;
+
   background-color: #000000;
   padding: 0;
   color: #000;
-  align-items: center;
   font: 12px 'Verdana', 'sans-serif';
+}
+
+.grupo{
+	
+	padding: 0px;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+
+}
+
+.empresas{
+	position: relative;
+	margin: 0;
+	border-radius: 10px;
+	flex-direction: column;
+	width: 500px;
+	margin-top: 140px;
+    margin-left: -941px;
+}
+
+.grupo .empresas:hover{
+	height: 500px;
+} 
+
+.grupo .empresas .texto{
+	margin-top:30px;
+	padding: 5px;
+
 }
 
 .barra {
 		background-color: #FFFFFF;
 		height: 85%;
 		transition: all .2% linear;
-		left:-200px;
 	    width: 22%;
 	    padding: 0px;
 		float: left;
+		margin-top: 80px;
 		display: block;
+		position: relative;
 
 		}
 nav{
-	width: 95%;
+	
 	margin-top:50px;
 	
 	
@@ -117,6 +146,8 @@ legend:hover{
 span:hover{
 	color:cornflowerblue;
 }
+
+
 *{
 	margin:10px;
 	padding: 0px;
@@ -139,12 +170,12 @@ h1:hover{
 
 .zoom img {
 	max-width: 100%;
-	-moz-transition: all 0.3s;
-	-webkit-transition: all 0.3s;
-	transition: all 0.7s;
-	cursor: pointer;
-	border:solid, 5px;
-	margin-left: 60px;
+    -moz-transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    transition: all 0.7s;
+    cursor: pointer;
+    border: solid, 5px;
+    margin-left: 180px;
 }
 
 .zoom:hover img {
@@ -158,14 +189,13 @@ h1:hover{
 }
 
 .zoom2 img {
-	max-width: 50%;
 	-moz-transition: all 0.3s;
-	-webkit-transition: all 0.3s;
-	transition: all 0.7s;
-	cursor: pointer;
-	border:solid, 1px;
-	margin-left: auto;
-	margin-inline: initial;
+    -webkit-transition: all 0.3s;
+    transition: all 0.7s;
+    cursor: pointer;
+    border: solid, 1px;
+	margin-top: -8px;
+    margin-left: 555px;
 	
 	
 }
@@ -181,17 +211,28 @@ h1:hover{
 	margin-left: auto;
 
 }
+h2:hover{
+	color: aliceblue;
+	
+}
+h2 #zoom3{
+	margin-left: 50px;
+}
 
+h2 #zoom3:hover{
+	color: aliceblue;
+	
+}
 .zoom3 img {
-max-width: 50%;
+
 	-moz-transition: all 0.3s;
-	-webkit-transition: all 0.3s;
-	transition: all 0.7s;
-	cursor: pointer;
-	border:solid, 1px;
-	margin-left: auto;
-	margin-inline: auto;
-    margin-top: -130px;
+    -webkit-transition: all 0.3s;
+    transition: all 0.7s;
+    cursor: pointer;
+    border: solid, 1px;
+    margin-left: 930px;
+    margin-top: -150px;
+  
 		
 }
 
@@ -202,17 +243,13 @@ max-width: 50%;
 }
 
 .zoom4 img {
-max-width: 50%;
-    -moz-transition: all 0.3s;
+	-moz-transition: all 0.3s;
     -webkit-transition: all 0.3s;
     transition: all 0.7s;
     cursor: pointer;
     border: solid, 1px;
-    margin-top: -285px;
-    padding: 155px;
-	margin-right: 525px;
- 
-    
+	margin-top: -150px;
+    margin-left: 0px;
 ;
 }
 .zoom4:hover img {
@@ -260,12 +297,16 @@ font-family: 'Cambria';
 
 .meio{
 	background-color: #FFFFFF;
-	padding: 22px;
+    padding: 22px;
+    margin-top: 200px;
+    margin-left: 0px;
+	width: 2100px;
 }
 
 li{
 	text-align: center;
-	margin-top: 0px;
+	margin-top: 10px;
+
 }
 #imagemlateral{
 	margin-left: 1000px;
@@ -301,13 +342,12 @@ color:white;
 font-size:13px;
 padding:6px 10px;
 text-decoration:none;
-margin-inline: 350px;
-margin-inline: 550px;
 
 }
 
 fieldset{
-        width: 100%;
+		width: 50%;
+    margin-left: 450px;
 }
       
 small{
@@ -318,12 +358,16 @@ section{
 	background-color: black;
 
 }
-
+.zoom2{
+	margin-left: 50px;
+}
 footer{
-	background-color: white;
+    background-color: white;
     text-align: center;
-    padding: 40px;
-	height: 810px;
+    padding: 0px;
+    height: 810px;
+    width: 1500px;
+    margin-left: -20px;
 }
 
 .rodape-prin
