--- a/alpha tec.css
+++ b/alpha tec.css
@@ -146,7 +146,7 @@ h1:hover{
     display: block;
 	position: absolute;
     z-index: 1;
-	margin-top: -600px;
+	margin-top: -680px;
 }
 
 .email {
@@ -425,7 +425,7 @@ footer{
 h1{
 	color:#1D3B9B;
 	margin-left: 25px;;
-	margin-top: -650px;
+	margin-top: -750px;
 }
 
 
@@ -529,10 +529,6 @@ footer{
     margin: 20px 0;
 }
 
-h1{
-	color: #2444AA;
-
-}
 
 .redes-sociais ul li {
 margin-left: 50%;
@@ -544,6 +540,10 @@ width: 100%;
 }
 
 .logo{
-	margin-left: 1250px;
-	margin-top: -50px;
+	margin-left: 1210px;
+	margin-top: -999px;
 }
+
+nav{
+	margin-top: 800px;
+}}
