--- a/automatize.css
+++ b/automatize.css
@@ -12,7 +12,7 @@ body {
 
 .barra {
 	background-color: #FFFFFF;
-    height: 90%;
+    height: 100%;
     transition: all .2% linear;
     margin-left: 20px;
     width: 18%;
@@ -21,9 +21,14 @@ body {
     display: block;
     position: absolute;
     z-index: 1;
-    margin-top: -600px;
+    margin-top: 50px;
 
 		}
+
+.logo{
+	margin-left: 1150px;
+
+}
 
 .container{
 	width: 100%;
@@ -32,7 +37,7 @@ body {
 	justify-content: space-around;
 	align-items:center; 
 	position: relative;
-	margin-top: -60px;
+	margin-top: 0px;
 }
 .box h2{
 	text-transform: uppercase;
@@ -108,7 +113,7 @@ body {
 }
 nav{
 	width: 98%;
-	margin-top:50px;
+	margin-top:0px;
 	
 }
 
@@ -256,11 +261,6 @@ button:hover{
 }
 label{
 	color: black;
-
-}
-
-fidelset{
-width: 100%; 
  
 }
 
@@ -328,18 +328,10 @@ footer{
 
 h1{
 	color:#676767;
-	margin-top: -100px;
+	margin-top: -10px;
 }
 
-.container{
-	width: 100%;
-	min-height: 100vh;
-	display: flex;
-	justify-content: space-around;
-	align-items:center; 
-	position: relative;
-	margin-top: -60px;
-}
+
 .box h2{
 	text-transform: uppercase;
 	color:#191919;
@@ -534,7 +526,7 @@ h2{
 #imagem{
 cursor: pointer;
  margin-left: 450px;
-	margin-top: 109px;
+	margin-top: 709px;
 }
 
 .box h2{
